Finished adding rounded images

--- a/3rdGradeBibleClass.html
+++ b/3rdGradeBibleClass.html
@@ -175,6 +175,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -216,12 +217,14 @@
         </p>
       </div>
       <div class="row mx-auto text-center pt-3">
-        <img
-          class="w-100"
-          src="./images/BibleGiving2023.jpg"
-          alt='montage of children receiving Bibles and looking at them.
-        "Giving Bilbes Celebrating the foundation of our faith by presenting age-appropriate Bibles to our kindergarteners, third-graders, and confirmands."'
-        />
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="./images/BibleGiving2023.jpg"
+            alt='montage of children receiving Bibles and looking at them.
+          "Giving Bilbes Celebrating the foundation of our faith by presenting age-appropriate Bibles to our kindergarteners, third-graders, and confirmands."'
+          />
+        </div>
       </div>
     </div>
 
