--- a/GLOW.html
+++ b/GLOW.html
@@ -179,6 +179,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -212,11 +213,13 @@
           </div>
         </div>
         <div class="col-lg-5 text-center">
-          <img
-            class="w-75"
-            src="./images/GLOW_logo2alt.jpg"
-            alt="God Lights Our Way GLOW -- letters against a swirled array of glowing tubes of  color"
-          />
+          <div class="col">
+            <img
+              class="w-75 rounded"
+              src="./images/GLOW_logo2alt.jpg"
+              alt="God Lights Our Way GLOW -- letters against a swirled array of glowing tubes of  color"
+            />
+          </div>
         </div>
       </div>
     </div>
