--- a/JAM.html
+++ b/JAM.html
@@ -179,6 +179,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -224,7 +225,7 @@
         </div>
         <div class="col-lg-6 text-center">
           <img
-            class="w-75"
+            class="w-75 rounded"
             src="./images/JAM_logo_black.jpg"
             alt="JAM (Jesus and Me) Wednesday night kids' program at Van Meter UMC.  Image is a black cross on colorful paint splatter on black background."
           />
@@ -234,21 +235,21 @@
       <div class="row pt-3 mx-auto">
         <div class="col-lg-4 align-self-center">
           <img
-            class="w-100"
+            class="w-100 rounded"
             src="./images/JAMweb1.jpg"
             alt="children play an egg-on-spoon game"
           />
         </div>
         <div class="col-lg-4 align-self-center pt-3 pt-lg-0">
           <img
-            class="w-100"
+            class="w-100 rounded"
             src="./images/JAMweb2.jpg"
             alt="children sitting on the floor in a circle"
           />
         </div>
         <div class="col-lg-4 align-self-center pt-3 pt-lg-0">
           <img
-            class="w-100"
+            class="w-100 rounded"
             src="./images/JAMweb3.jpg"
             alt="children playing floor game (camel carrying a load)"
           />
@@ -258,7 +259,7 @@
       <div class="row pt-3 mx-auto justify-content-center">
         <div class="col-lg-6 align-self-center pt-3 pt-lg-0 text-center">
           <img
-            class="w-100"
+            class="w-100 rounded"
             src="./images/JAMweb4.jpg"
             alt="children at a round table listening to a story"
           />
