--- a/MinistryBread.html
+++ b/MinistryBread.html
@@ -179,6 +179,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -213,15 +214,18 @@
           Pickups are Sunday and Monday evenings, with delivery to the church
           the following mornings.
           <a href="https://www.signupgenius.com/go/4090d4ba4a82ea3fd0-panara"
-            ><strong>Click here to sign up.</strong></a
-          >
+            ><strong>Click here to sign up</strong></a
+          >.
         </p>
       </div>
       <div class="row pt-3 mx-auto">
-        <img
-          src="./images/MinistryBreadMinistry2023.jpg"
-          alt="Generous donations from the Panera Bread Company are distributed to the Adel Food Pantry, Kids Care, seniors, and other individuals."
-        />
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="./images/MinistryBreadMinistry2023.jpg"
+            alt="Generous donations from the Panera Bread Company are distributed to the Adel Food Pantry, Kids Care, seniors, and other individuals."
+          />
+        </div>
       </div>
     </div>
     <!-- Start Footer -->
