--- a/MinistryChildrensChristmasProgram.html
+++ b/MinistryChildrensChristmasProgram.html
@@ -181,6 +181,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -205,18 +206,22 @@
         </p>
       </div>
       <div class="row pt-3 mx-auto text-center">
-        <img
-          class="w-100"
-          src="./images/MinistryChildren'sProgram2023-1.jpg"
-          alt="Christmas play features children dressed as mice as well as the usual nativity scenes."
-        />
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="./images/MinistryChildren'sProgram2023-1.jpg"
+            alt="Christmas play features children dressed as mice as well as the usual nativity scenes."
+          />
+        </div>
       </div>
       <div class="row pt-3 mx-auto text-center">
-        <img
-          class="w-100"
-          src="./images/MinistryChildren'sProgram2023-2.jpg"
-          alt='candle-lit children singing "Silent Night"; party after the show'
-        />
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="./images/MinistryChildren'sProgram2023-2.jpg"
+            alt='candle-lit children singing "Silent Night"; party after the show'
+          />
+        </div>
       </div>
     </div>
     <!-- Start Footer -->
