--- a/MinistryChristmasCantata.html
+++ b/MinistryChristmasCantata.html
@@ -179,6 +179,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -204,11 +205,13 @@
         </p>
       </div>
       <div class="row pt-3 mx-auto text-center">
-        <img
-          class="w-100"
-          src="./images/ChristmasCantata2022-23web.jpg"
-          alt="Images of choir, soloists, and readers"
-        />
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="./images/ChristmasCantata2022-23web.jpg"
+            alt="Images of choir, soloists, and readers"
+          />
+        </div>
       </div>
     </div>
     <!-- Start Footer -->
