--- a/MinistryConfirmation.html
+++ b/MinistryConfirmation.html
@@ -175,6 +175,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -203,26 +204,32 @@
         </p>
       </div>
       <div class="row mx-auto text-center pt-3">
-        <img
-          class="w-100"
-          src="./images/MinistryConfirmation01.jpg"
-          alt="Confirmation:  learning our history, exploring our faith, and making friends"
-        />
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="./images/MinistryConfirmation01.jpg"
+            alt="Confirmation:  learning our history, exploring our faith, and making friends"
+          />
+        </div>
       </div>
       <div class="row mx-auto text-center pt-3">
-        <img
-          class="w-100"
-          src="./images/MinistryConfirmation02.jpg"
-          alt="images of visits to:
-        monastery; Temple B'nai Eshurun synagogue; Sinsinawa labyrinth, sanctuary, and nunnery; Martin Luther statue at Wartburg seminary"
-        />
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="./images/MinistryConfirmation02.jpg"
+            alt="images of visits to:
+          monastery; Temple B'nai Eshurun synagogue; Sinsinawa labyrinth, sanctuary, and nunnery; Martin Luther statue at Wartburg seminary"
+          />
+        </div>
       </div>
       <div class="row mx-auto text-center pt-3">
-        <img
-          class="w-100"
-          src="./images/MinistryConfirmation03.jpg"
-          alt='picture collection showing field trip to "Field of Dreams" and images of baptism and confirmation ceremony.'
-        />
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="./images/MinistryConfirmation03.jpg"
+            alt='picture collection showing field trip to "Field of Dreams" and images of baptism and confirmation ceremony.'
+          />
+        </div>
       </div>
     </div>
 
