--- a/MinistryEasterBreakfast.html
+++ b/MinistryEasterBreakfast.html
@@ -179,6 +179,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -203,18 +204,22 @@
         </p>
       </div>
       <div class="row pt-3 mx-auto text-center">
-        <img
-          class="w-100"
-          src="./images/EasterSunriseBkft2023Web1.jpg"
-          alt="Easter Sunrise service is followed by breakfast."
-        />
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="./images/EasterSunriseBkft2023Web1.jpg"
+            alt="Easter Sunrise service is followed by breakfast."
+          />
+        </div>
       </div>
       <div class="row pt-3 mx-auto text-center">
-        <img
-          class="w-100"
-          src="./images/EasterSunriseBkft2023Web2.jpg"
-          alt="people gathered to eat, some wearing rabbit ears"
-        />
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="./images/EasterSunriseBkft2023Web2.jpg"
+            alt="people gathered to eat, some wearing rabbit ears"
+          />
+        </div>
       </div>
     </div>
     <!-- Start Footer -->
