--- a/MinistryEasterEggHunt.html
+++ b/MinistryEasterEggHunt.html
@@ -175,6 +175,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -192,10 +193,13 @@
         <p>Easter delights abound on our annual egg hunt Easter morning.</p>
       </div>
       <div class="row mx-auto text-center pt-3">
-        <img
-          src="./images/MinistryEasterHunt2022.jpg"
-          alt="Easter Sunday egg hunt"
-        />
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="./images/MinistryEasterHunt2022.jpg"
+            alt="Easter Sunday egg hunt"
+          />
+        </div>
       </div>
     </div>
 
