--- a/MinistryShroveTuesday.html
+++ b/MinistryShroveTuesday.html
@@ -181,6 +181,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -205,11 +206,13 @@
         </p>
       </div>
       <div class="row pt-3 mx-auto text-center">
-        <img
-          class="w-100"
-          src="./images/MinistryShroveTuesday2024web.jpg"
-          alt="Shrove Tuesday fun:  food, pancake-flipping, beads, and fellowship"
-        />
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="./images/MinistryShroveTuesday2024web.jpg"
+            alt="Shrove Tuesday fun:  food, pancake-flipping, beads, and fellowship"
+          />
+        </div>
       </div>
     </div>
     <!-- Start Footer -->
