--- a/VBS.html
+++ b/VBS.html
@@ -181,6 +181,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
