--- a/choir.html
+++ b/choir.html
@@ -179,6 +179,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -238,7 +239,7 @@
       <div class="row pt-3 mx-auto text-center">
         <div class="col">
           <img
-            class="w-75"
+            class="w-75 rounded"
             src="./images/Choir2010.jpg"
             alt="Chancel Choir sings praise during our worship service."
           />
@@ -256,14 +257,14 @@
       <div class="row pt-3 mx-auto">
         <div class="col-lg-6 align-self-center text-center">
           <img
-            class="w-100"
+            class="w-100 rounded"
             src="./images/PraiseTeam01thumb.jpg"
             alt="Praise Team singers"
           />
         </div>
         <div class="col-lg-6 align-self-center text-center">
           <img
-            class="w-100"
+            class="w-100 rounded"
             src="./images/PraiseTeam02thumb.jpg"
             alt="Praise Team musicians"
           />
@@ -279,11 +280,13 @@
         </p>
       </div>
       <div class="row pt-3 mx-auto text-center">
-        <img
-          class="w-100"
-          src="./images/ChancelChoirMelMike.jpg"
-          alt="Choir sings at Easter"
-        />
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="./images/ChancelChoirMelMike.jpg"
+            alt="Choir sings at Easter"
+          />
+        </div>
       </div>
       <div class="row pt-3 mx-auto text-center">
         <p>
