--- a/directions.html
+++ b/directions.html
@@ -175,6 +175,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -189,7 +190,11 @@
       </div>
       <div class="row mx-auto pt-3">
         <div class="col-lg-5 text-center align-self-center">
-          <img src="./images/vanmeterchurch.jpg" alt="Van Meter UMC" />
+          <img
+            class="w-75 rounded"
+            src="./images/vanmeterchurch.jpg"
+            alt="Van Meter UMC"
+          />
         </div>
         <div class="col-lg-6 align-self-center my-4">
           <strong>
@@ -211,7 +216,7 @@
         <a
           href="http://maps.google.com/maps?q=100+Hazel+St.+Van+Meter,+IA+50261&amp;hl=en&amp;sll=41.525423,-93.883366&amp;sspn=0.013735,0.033023&amp;gl=us&amp;hnear=100+Hazel+St,+Van+Meter,+Dallas,+Iowa+50261&amp;t=m&amp;z=17"
           ><img
-            class="w-75"
+            class="w-75 rounded"
             src="images/VMmap.png"
             alt="map of Van Meter with church"
           />
