--- a/education.html
+++ b/education.html
@@ -181,6 +181,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -223,7 +224,7 @@
         </div>
         <div class="col-lg-5 text-center">
           <img
-            class="w-75"
+            class="w-75 rounded"
             src="./images/JAM_logo_black.jpg"
             alt="JAM (Jesus and Me) Wednesday night kigs' program at Van Meter UMC.  Image is a black cross on colorful paint splatter on black background."
           />
