--- a/kidsCare.html
+++ b/kidsCare.html
@@ -175,6 +175,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -377,13 +378,13 @@
         </p>
       </div>
       <div class="row align-self-center mx-auto pt-3">
-        <p>
+        <div class="col">
           <img
             src="./images/KidsCareFun.jpg"
             class="w-100 rounded"
             alt="Kids Care Fun a collage of pictures from activities and field trips"
           />
-        </p>
+        </div>
       </div>
     </div>
     <!-- Start Footer -->
