--- a/missionmoment.html
+++ b/missionmoment.html
@@ -179,6 +179,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -226,7 +227,7 @@
         </div>
         <div class="col-lg-6 align-self-center text-center">
           <img
-            class="w-25"
+            class="w-25 rounded"
             src="./images/families_forward_Bidwell.jpg"
             alt="families forward -- services + shelter -- Bidwell Pantry"
           />
@@ -250,7 +251,7 @@
           <div class="row">
             <div class="col-lg-4 align-self-center text-lg-end">
               <img
-                class="w-50"
+                class="w-50 rounded"
                 src="./images/missions_bag_1.jpg"
                 alt="Good Samaritan Food Pantry 
           serving our neighbors since 1982"
@@ -258,14 +259,14 @@
             </div>
             <div class="col-lg-4 align-self-center text-lg-center pt-3 pt-lg-0">
               <img
-                class="w-50"
+                class="w-50 rounded"
                 src="./images/missions_bag_2.jpg"
                 alt="white toothpaste coming out of a toothpaste tube"
               />
             </div>
             <div class="col-lg-4 align-self-center text-lg-start pt-3 pt-lg-0">
               <img
-                class="w-50"
+                class="w-50 rounded"
                 src="./images/missions_bag_3.jpg"
                 alt="white toothpaste coming out of a toothpaste tube"
               />
@@ -289,7 +290,7 @@
           <div class="row">
             <div class="col-lg-6 align-self-center text-lg-end">
               <img
-                class="w-75"
+                class="w-75 rounded"
                 src="./images/GoodSamaritanFoodPantryLogo.jpg"
                 alt="Good Samaritan Food Pantry 
             serving our neighbors since 1982"
@@ -297,7 +298,7 @@
             </div>
             <div class="col-lg-6 align-self-center text-lg-start pt-3 pt-lg-0">
               <img
-                class="w-50"
+                class="w-50 rounded"
                 src="./images/missions_toothpaste2.png"
                 alt="white toothpaste coming out of a toothpaste tube"
               />
