--- a/pastorsmessage.html
+++ b/pastorsmessage.html
@@ -179,6 +179,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -199,7 +200,11 @@
       </div>
       <div class="row mx-auto pt-3">
         <div class="col-lg-2 text-center">
-          <img src="./images/PastorBeth2.jpg" alt="Pastor Beth" />
+          <img
+            class="w-50 w-lg-100 rounded"
+            src="./images/PastorBeth2.jpg"
+            alt="Pastor Beth"
+          />
         </div>
         <div class="col-lg-10 text-center text-lg-start pt-3">
           <div class="row"><h2>Connecting - March 2024</h2></div>
