--- a/photos.html
+++ b/photos.html
@@ -175,6 +175,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -189,22 +190,31 @@
       </div>
       <div class="row pt-3 mx-auto"><hr /></div>
       <div class="row mx-auto text-center pt-3">
-        <img
-          src="./images//Highlights2023-1.jpg"
-          alt="photos of the church at worship, in service, and at Wednesday night's kids time"
-        />
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="./images//Highlights2023-1.jpg"
+            alt="photos of the church at worship, in service, and at Wednesday night's kids time"
+          />
+        </div>
       </div>
       <div class="row mx-auto text-center pt-3">
-        <img
-          src="./images/Highlights2023-2.jpg"
-          alt="photos of children having fun at Vacation Bible School and with their backpacks at a blessing"
-        />
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="./images/Highlights2023-2.jpg"
+            alt="photos of children having fun at Vacation Bible School and with their backpacks at a blessing"
+          />
+        </div>
       </div>
       <div class="row mx-auto text-center pt-3">
-        <img
-          src="./images/Highlights2023-3.jpg"
-          alt="photos of the church in fellowship, serving food and eating together; photos of singing at worship and in rehearsal"
-        />
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="./images/Highlights2023-3.jpg"
+            alt="photos of the church in fellowship, serving food and eating together; photos of singing at worship and in rehearsal"
+          />
+        </div>
       </div>
     </div>
 
