--- a/scholarships.html
+++ b/scholarships.html
@@ -179,6 +179,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -238,7 +239,11 @@
           </div>
         </div>
         <div class="col-lg-6 align-self-center text-center">
-          <img class="w-75" src="./images/scholarship.jpg" alt="scholarships" />
+          <img
+            class="w-75 rounded"
+            src="./images/scholarship.jpg"
+            alt="scholarships"
+          />
         </div>
       </div>
     </div>
