--- a/specialservices.html
+++ b/specialservices.html
@@ -179,6 +179,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -205,11 +206,13 @@
         </p>
       </div>
       <div class="row pt-3 mx-auto text-center">
-        <img
-          class="w-100"
-          src="./images/HolyWeek2023.jpg"
-          alt="Holy Week:  Palm Sunday, Good Friday, Easter Sunrise (followed by breakfast), and our traditional Easter service"
-        />
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="./images/HolyWeek2023.jpg"
+            alt="Holy Week:  Palm Sunday, Good Friday, Easter Sunrise (followed by breakfast), and our traditional Easter service"
+          />
+        </div>
       </div>
       <div class="row pt-3 mx-auto">
         <p>
@@ -218,11 +221,13 @@
         </p>
       </div>
       <div class="row pt-3 mx-auto text-center">
-        <img
-          class="w-100"
-          src="./images/ChristmasCantata2022-23web.jpg"
-          alt="Images of choir, soloists, director, and pianist at the cantata performance"
-        />
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="./images/ChristmasCantata2022-23web.jpg"
+            alt="Images of choir, soloists, director, and pianist at the cantata performance"
+          />
+        </div>
       </div>
     </div>
     <!-- Start Footer -->
