--- a/MinistryKidsShoppingDay.html
+++ b/MinistryKidsShoppingDay.html
@@ -175,6 +175,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -205,10 +206,13 @@
         </p>
       </div>
       <div class="row mx-auto text-center pt-3">
-        <img
-          src="./images/MinistryKidsShoppingDay2.jpg"
-          alt="Kids' Shopping Day.  Elves help kids shop.  Gifts are wrapped so they stay a surprise. Parents wait outside.  Van Meter Methodists and Baptists partner on this project."
-        />
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="./images/MinistryKidsShoppingDay2.jpg"
+            alt="Kids' Shopping Day.  Elves help kids shop.  Gifts are wrapped so they stay a surprise. Parents wait outside.  Van Meter Methodists and Baptists partner on this project."
+          />
+        </div>
       </div>
     </div>
 
