--- a/beliefs.html
+++ b/beliefs.html
@@ -175,6 +175,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -208,7 +209,7 @@
       <div class="row text-center pt-3 mx-auto">
         <div class="col">
           <img
-            class="w-50"
+            class="w-50 rounded"
             src="./images/churchFaith.jpg"
             alt="congregation and choir"
           />
