--- a/building-request.html
+++ b/building-request.html
@@ -238,6 +238,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
