--- a/calendar.html
+++ b/calendar.html
@@ -175,6 +175,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -190,14 +191,15 @@
       </div>
 
       <div class="row mx-auto">
-        <iframe
-          src="//www.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23cccccc&amp;src=9k15r4oj9pihte8nr4s3ra7qag%40group.calendar.google.com&amp;color=%23BE6D00&amp;src=a8so3okd24r3jbjr546tastrg0%40group.calendar.google.com&amp;color=%234A716C&amp;src=5cm43rq8vd82m98u7odb5jjmas%40group.calendar.google.com&amp;color=%23A32929&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%232952A3&amp;ctz=America%2FChicago"
-          class="border-0"
-          width="710"
-          height="600"
-          frameborder="0"
-          scrolling="no"
-        ></iframe>
+        <div class="col">
+          <iframe
+            src="//www.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23cccccc&amp;src=9k15r4oj9pihte8nr4s3ra7qag%40group.calendar.google.com&amp;color=%23BE6D00&amp;src=a8so3okd24r3jbjr546tastrg0%40group.calendar.google.com&amp;color=%234A716C&amp;src=5cm43rq8vd82m98u7odb5jjmas%40group.calendar.google.com&amp;color=%23A32929&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%232952A3&amp;ctz=America%2FChicago"
+            class="border-0 rounded w-100"
+            height="600"
+            frameborder="0"
+            scrolling="no"
+          ></iframe>
+        </div>
       </div>
     </div>
     <!-- Start Footer -->
