--- a/ciayouth.html
+++ b/ciayouth.html
@@ -179,6 +179,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -199,7 +200,7 @@
       <div class="row d-flex justify-content-center pt-3 mx-auto text-center">
         <div class="col-lg-9">
           <img
-            class="w-50"
+            class="w-50 rounded"
             src="./images/youth01.jpg"
             alt="Van Meter United Methodist youth group"
           />
@@ -284,11 +285,13 @@
         </p>
       </div>
       <div class="row mx-auto pt-3 text-center">
-        <img
-          class="w-100"
-          src="./images/youthSWAG.jpg"
-          alt="Youth Group:  Adventure, Service"
-        />
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="./images/youthSWAG.jpg"
+            alt="Youth Group:  Adventure, Service"
+          />
+        </div>
       </div>
     </div>
     <!-- Start Footer -->
