--- a/missing.html
+++ b/missing.html
@@ -152,6 +152,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -175,7 +176,7 @@
       </div>
     </div>
     <footer class="mt-auto">
-      <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
+      <div class="row mx-auto bg-dark shadow text-white">
         <div
           class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
         >
