--- a/missionmomentFoodPantry.html
+++ b/missionmomentFoodPantry.html
@@ -179,6 +179,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -250,7 +251,7 @@
         </div>
         <div class="col-lg-5 text-center pt-3 pt-lg-0 align-self-center">
           <img
-            class="w-75"
+            class="w-75 rounded"
             src="./images/GoodSamaritanFoodPantryLogo.jpg"
             alt="Good Samaritan Food Pantry -- serving our neighbors since 1982"
           />
@@ -278,7 +279,7 @@
         </div>
         <div class="col-lg-5 text-center pt-3 pt-lg-0 align-self-center">
           <img
-            class="w-50"
+            class="w-50 rounded"
             src="./images/food.jpg"
             alt="food for the food pantry"
           />
