--- a/missionmomentTeams.html
+++ b/missionmomentTeams.html
@@ -179,6 +179,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -238,7 +239,7 @@
         </div>
         <div class="col-lg-5 text-center pt-3 pt-lg-0 align-self-center">
           <img
-            class="w-75"
+            class="w-75 rounded"
             src="./images/MissionsTeam.jpg"
             alt="Missions Team"
           />
