--- a/pastorsmessageLent.html
+++ b/pastorsmessageLent.html
@@ -179,6 +179,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -200,7 +201,11 @@
         <div class="col-lg-6 align-self-center text-center">
           <div class="row">
             <div class="col-lg-4">
-              <img src="./images/PastorBeth2.jpg" alt="Pastor Beth" />
+              <img
+                class="w-50 w-lg-100 rounded"
+                src="./images/PastorBeth2.jpg"
+                alt="Pastor Beth"
+              />
               <p>Rev. Beth</p>
             </div>
             <div class="col-lg-8 align-self-center text-center pb-lg-4">
