--- a/publications.html
+++ b/publications.html
@@ -175,6 +175,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
