--- a/services.html
+++ b/services.html
@@ -175,6 +175,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -190,7 +191,7 @@
       <div class="row text-center pt-3 mx-auto">
         <div class="col">
           <img
-            class="w-50"
+            class="w-50 rounded"
             src="./images/congregation.jpg"
             alt="view of sanctuary from the front"
           />
@@ -209,7 +210,7 @@
       <div class="row text-center pt-3 mx-auto">
         <div class="col">
           <img
-            class="w-50"
+            class="w-50 rounded"
             src="./images/congregation2.jpg"
             alt="view of sanctuary from rear at Christmas"
           />
