--- a/staff.html
+++ b/staff.html
@@ -177,6 +177,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
