--- a/worship.html
+++ b/worship.html
@@ -175,6 +175,7 @@
                 autocorrect="off"
                 autocomplete="off"
                 autocapitalize="off"
+                placeholder="Search"
               />
             </div>
           </div>
@@ -208,7 +209,7 @@
               <a href="/JAM.html">
                 <img
                   src="./images/JAM_logo.png"
-                  class="w-50"
+                  class="w-50 rounded"
                   alt="JAM Jesus and Me (white cross atop paint splatter)"
                 />
               </a>
@@ -240,7 +241,7 @@
           <div class="col-lg-3 align-self-center text-center text-lg-start">
             <img
               src="./images/worship2.jpg"
-              class="w-50"
+              class="w-50 rounded"
               alt="drawing of stained glass window featuring creche, star, shepherd, Mary, and bright piecemeal background"
             />
           </div>
@@ -255,7 +256,7 @@
             ><img
               class="rounded"
               src="images/pastormessage.jpg"
-              alt="Pastor’s Message"
+              alt="Pastor's Message"
           /></a>
         </div>
         <div class="row mx-auto pt-4">
@@ -301,11 +302,6 @@
               </tbody>
             </table>
           </div>
-        </div>
-
-        <div class="row mx-auto">
-          <div class="col-lg-5"></div>
-          <div class="col-lg-3 align-self-center text-center"></div>
         </div>
       </div>
     </div>
