--- a/missing.html
+++ b/missing.html
@@ -18,10 +18,10 @@
     <link rel="icon" href="./images/umc-logo.png" />
     <title>404 (Page Not Found) Error</title>
   </head>
-  <body class="bg-2 flex-column d-flex min-vh-100">
-    <div id="navbar-container">
+  <body>
+    <div id="navbar-container" class="container mx-auto p-0 mt-sm-3">
       <nav
-        class="navbar navbar-expand-lg navbar-dark bg-dark"
+        class="navbar navbar-expand-lg navbar-dark bg-dark rounded-sm-top"
         aria-label="Fifth navbar example"
       >
         <div class="container-fluid">
@@ -159,7 +159,7 @@
         </div>
       </div>
     </div>
-    <div class="px-3 mx-auto pb-5">
+    <div class="px-3 mx-auto pb-5 container bg-2 full-page">
       <div class="row pt-5 text-center">
         <h1>Blessed are those who receive 404 errors.</h1>
       </div>
@@ -175,8 +175,8 @@
         </h5>
       </div>
     </div>
-    <footer class="mt-auto">
-      <div class="row mx-auto bg-dark shadow text-white">
+    <footer class="mt-auto mb-sm-3 container mx-auto p-0">
+      <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
         <div
           class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
         >
