--- a/missing.html
+++ b/missing.html
@@ -159,7 +159,7 @@
         </div>
       </div>
     </div>
-    <div class="px-3 mx-auto pb-5 container bg-2 full-page">
+    <div class="px-3 mx-auto pb-5 container bg-2">
       <div class="row pt-5 text-center">
         <h1>Blessed are those who receive 404 errors.</h1>
       </div>
