testing missing page

--- a/missing.html
+++ b/missing.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <!-- Required Scripts -->
     <script src="navbar.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/autoComplete.min.js"></script>
+    <!-- End Scripts -->
+    <!-- Required Stylesheets -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -15,10 +16,27 @@
       href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css"
     />
     <link rel="stylesheet" href="./index.css" />
+
+    <!-- End Stylesheets -->
+
+    <!-- Meta tags -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Van Meter United Methodist Church</title>
+    <meta
+      name="keywords"
+      content="Van Meter United Methodist Church, Van Meter, VMUMC"
+    />
+    <meta
+      name="description"
+      content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation."
+    />
     <link rel="icon" href="./images/umc-logo.png" />
-    <title>404 (Page Not Found) Error</title>
   </head>
+
+  <!-- Body starts here -->
   <body>
+    <!-- Navbar section -->
     <div id="navbar-container" class="container mx-auto p-0 mt-sm-3">
       <nav
         class="navbar navbar-expand-lg navbar-dark bg-dark rounded-sm-top"
@@ -159,24 +177,36 @@
         </div>
       </div>
     </div>
-    <div class="px-3 mx-auto pb-5 container bg-2">
-      <div class="row pt-5 text-center">
-        <h1>Blessed are those who receive 404 errors.</h1>
+    <!-- End Navbar -->
+
+    <div class="container mx-auto px-3 pb-5 bg text-center full-page">
+      <div class="row pt-5 mx-auto">
+        <div class="col">
+          <h1>Blessed are those who receive 404 errors.</h1>
+        </div>
       </div>
-      <div class="row text-center pt-2">
-        <h4>
-          Sorry we couldn't find the page! It shouldn't take a miracle to find
-          the link you're looking for.
-        </h4>
+      <div class="row mx-auto">
+        <div class="col">
+          <h4>
+            Sorry we couldn't find the page! It shouldn't take a miracle to find
+            the link you're looking for.
+          </h4>
+        </div>
       </div>
-      <div class="row text-center pt-2">
-        <h5>
-          Try using the navigation or search bar to guide you back to the lord.
-        </h5>
+      <div class="row mx-auto">
+        <div class="col">
+          <h5>
+            Try using the navigation or search bar to guide you back to the
+            lord.
+          </h5>
+        </div>
       </div>
     </div>
-    <footer class="mt-auto mb-sm-3 container mx-auto p-0">
+    <!-- Start Footer -->
+    <footer class="mb-sm-3 container mx-auto p-0">
+      <!-- Footer row -->
       <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
+        <!-- Left column for UMC logo -->
         <div
           class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
         >
@@ -184,6 +214,7 @@
             ><img height="60" width="60" src="./images/white+umc+logo.png"
           /></a>
         </div>
+        <!-- Center column for copyright information -->
         <div
           class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start"
         >
@@ -192,17 +223,20 @@
             All rights reserved.
           </p>
         </div>
+        <!-- Right column for social media links -->
         <div class="col-lg-2 mt-2 text-center align-self-center text-lg-end">
           <p>Stay Connected</p>
         </div>
         <div
           class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center"
         >
+          <!-- Social media link -->
           <a href="https://www.facebook.com/profile.php?id=100064317144537"
             ><img height="35" width="35" src="./images/facebook.png"
           /></a>
         </div>
       </div>
     </footer>
+    <!-- End Footer -->
   </body>
 </html>
