--- a/missing.html
+++ b/missing.html
@@ -22,7 +22,7 @@
     <!-- Meta tags -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Van Meter United Methodist Church</title>
+    <title>Error 404 - Van Meter United Methodist Church</title>
     <meta
       name="keywords"
       content="Van Meter United Methodist Church, Van Meter, VMUMC"
@@ -199,6 +199,14 @@
             Try using the navigation or search bar to guide you back to the
             lord.
           </h5>
+        </div>
+      </div>
+      <div class="row mx-auto pt-3">
+        <div class="col">
+          <p>
+            If you got here by using a broken link on the website, let us know
+            by emailing <a href="mailto:office@vmumc.com">office@vmumc.com</a>.
+          </p>
         </div>
       </div>
     </div>
