removed css banner

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <picture>
       <source srcset="./images/websitebanner.webp" type="image/webp" />
       <source srcset="./images/websitebanner.jpg" type="image/jpeg" />
-      <img class="w-100 rounded-sm-top" src="./images/websitebanner.jpg" />
+      <img class="w-100 rounded-sm-top" />
     </picture>
   </div>
   <div id="navbar-container" class="container mx-auto p-0">
