Preload banner img

--- a/photos.html
+++ b/photos.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="preload"
+      href="./images/websitebanner.webp"
+      as="image"
+      fetchpriority="high"
+    />
+    <link
+      rel="preload"
+      href="./images/websitebanner.jpg"
+      as="image"
+      fetchpriority="high"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Photos - Van Meter United Methodist Church</title>
