--- a/choir.html
+++ b/choir.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="preload"
+      href="./images/websitebanner.webp"
+      as="image"
+      fetchpriority="high"
+    />
+    <link
+      rel="preload"
+      href="./images/websitebanner.jpg"
+      as="image"
+      fetchpriority="high"
+    />
     <!-- Required Scripts -->
     <script src="navbar.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
